--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "3.3.0"
   },
   "devDependencies": {
+    "babel-register": "6.26.0",
     "angular-mocks": "^1.5.8",
     "babel-core": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
